--- a/index.html
+++ b/index.html
@@ -249,21 +249,28 @@
             
     
 
+
 <footer style="background-color: #fff; padding: 30px 0; text-align: center; border-top: 2px solid #e0e0e0;">
+    <!-- About FA-Tshirt Section -->
+    <div class="about-us" style="margin-bottom: 30px;">
+        <h3 style="font-size: 20px; color: #000;">About FA-Tshirt</h3>
+        <p style="font-size: 14px; color: #666;">FA-Tshirt is dedicated to providing the best quality t-shirts at affordable prices. We believe that everyone deserves to wear stylish and trendy clothing without breaking the bank. We are committed to delivering high-quality products that cater to all demographics, making sure no one misses out on fashion. Our goal is to become India’s number one quality clothing brand, focusing on sustainability and affordability for all.</p>
+    </div>
+
     <!-- Quick Links Section -->
     <div class="footer-links" style="margin-bottom: 30px;">
         <ul style="list-style-type: none; padding: 0; margin: 0; display: flex; justify-content: center; gap: 50px;">
             <li>
-                <a href="#privacy-policy" style="text-decoration: none; color: #000; font-size: 18px; font-weight: bold;">Privacy Policy</a>
-                <p style="font-size: 14px; color: #666;">This Privacy Policy explains how we handle...</p>
+                <h4 style="font-size: 18px; color: #000;">Privacy Policy</h4>
+                <p style="font-size: 14px; color: #666;">This Privacy Policy explains how we handle your data and protect your privacy when you visit our website.</p>
             </li>
             <li>
-                <a href="#terms-and-conditions" style="text-decoration: none; color: #000; font-size: 18px; font-weight: bold;">Terms & Conditions</a>
-                <p style="font-size: 14px; color: #666;">By using this website, you agree to these terms...</p>
+                <h4 style="font-size: 18px; color: #000;">Terms & Conditions</h4>
+                <p style="font-size: 14px; color: #666;">By accessing this site, you agree to follow the terms and conditions of use. Please read carefully before proceeding.</p>
             </li>
             <li>
-                <a href="#faq" style="text-decoration: none; color: #000; font-size: 18px; font-weight: bold;">FAQ</a>
-                <p style="font-size: 14px; color: #666;">Here you can find answers to the most frequently asked questions...</p>
+                <h4 style="font-size: 18px; color: #000;">FAQ</h4>
+                <p style="font-size: 14px; color: #666;">Here you can find answers to the most frequently asked questions, like how to place an order, how to track your purchase, etc.</p>
             </li>
         </ul>
     </div>
@@ -279,10 +286,3 @@
         <p style="color: #666; font-size: 14px;">© 2025 FA-Tshirt. All rights reserved. | Designed with ❤️ in India.</p>
     </div>
 </footer>
-
-
-   <!-- Footer Bottom Section -->
-        <div class="footer-bottom" style="background-color: #333; color: white; padding: 20px 0; text-align: center;">
-            <p style="font-size: 16px;">&copy; 2025 FA-Tshirt. All rights reserved. | Designed with ❤️ in India.</p>
-        </div>
-    </footer>
