--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 
 <footer style="background-color: #fff; padding: 30px 0; text-align: center; border-top: 2px solid #e0e0e0;">
-    <!-- About FA-Tshirt Section -->
+    <!-- About FA-Tshirt Section (Placed on top) -->
     <div class="about-us" style="margin-bottom: 30px;">
         <h3 style="font-size: 20px; color: #000;">About FA-Tshirt</h3>
         <p style="font-size: 14px; color: #666;">FA-Tshirt is dedicated to providing the best quality t-shirts at affordable prices. We believe that everyone deserves to wear stylish and trendy clothing without breaking the bank. We are committed to delivering high-quality products that cater to all demographics, making sure no one misses out on fashion. Our goal is to become India’s number one quality clothing brand, focusing on sustainability and affordability for all.</p>
