--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
 
 
 <footer style="background-color: #fff; padding: 30px 0; text-align: center; border-top: 2px solid #e0e0e0;">
-    <!-- About FA-Tshirt Section (Placed on top) -->
-    <div class="about-us" style="margin-bottom: 30px;">
-        <h3 style="font-size: 20px; color: #000;">About FA-Tshirt</h3>
-        <p style="font-size: 14px; color: #666;">FA-Tshirt is dedicated to providing the best quality t-shirts at affordable prices. We believe that everyone deserves to wear stylish and trendy clothing without breaking the bank. We are committed to delivering high-quality products that cater to all demographics, making sure no one misses out on fashion. Our goal is to become India’s number one quality clothing brand, focusing on sustainability and affordability for all.</p>
+    <!-- About FA-Tshirt Section (with smaller text and less height) -->
+    <div class="about-us" style="margin-bottom: 20px; max-width: 800px; margin-left: auto; margin-right: auto;">
+        <h3 style="font-size: 20px; color: #000; margin-bottom: 10px;">About FA-Tshirt</h3>
+        <p style="font-size: 14px; color: #666; line-height: 1.6; text-align: center;">FA-Tshirt is dedicated to providing the best quality t-shirts at affordable prices. We believe that everyone deserves to wear stylish and trendy clothing without breaking the bank. Our mission is to become India’s number one quality clothing brand, focusing on sustainability and affordability for all.</p>
     </div>
 
     <!-- Quick Links Section -->
-    <div class="footer-links" style="margin-bottom: 30px;">
+    <div class="footer-links" style="margin-bottom: 20px;">
         <ul style="list-style-type: none; padding: 0; margin: 0; display: flex; justify-content: center; gap: 50px;">
             <li>
                 <h4 style="font-size: 18px; color: #000;">Privacy Policy</h4>
@@ -276,7 +276,7 @@
     </div>
 
     <!-- Contact Us Section -->
-    <div class="footer-contact" style="margin-bottom: 30px;">
+    <div class="footer-contact" style="margin-bottom: 20px;">
         <a href="mailto:contact@fatshirt.com" style="text-decoration: none; color: #000; font-size: 18px;">Contact Us</a>
         <p style="font-size: 14px; color: #666;">For any inquiries, feel free to reach out to us via email or call us at +91 123 456 7890</p>
     </div>
