--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background-color: #1d1d1d;
+            background-color: #ff6347; /* Red color */
             color: white;
         }
         header .logo h1 {
@@ -30,6 +30,7 @@
             font-weight: bold;
             color: #fff;
             margin-right: 15px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* 3D effect */
         }
         header .search-bar input {
             padding: 12px;
@@ -52,7 +53,7 @@
             transition: background-color 0.3s ease;
         }
         header .header-right a:hover {
-            background-color: #ff6347;
+            background-color: #e5533f; /* Darker red for hover */
         }
         /* Main Navigation Menu */
         .main-nav {
@@ -195,7 +196,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <h1>FA-Tshirt</h1>
+            <h1 style="text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);">FA-Tshirt</h1> <!-- 3D effect added -->
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search your products...">
