--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background-color: #ff6347; /* Red color */
+            background-color: #ff6347; /* Candy Apple Red */
             color: white;
         }
         header .logo h1 {
+            font-family: 'Snap ITC', cursive;
             font-size: 36px;
             font-weight: bold;
             color: #fff;
             margin-right: 15px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* 3D effect */
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4); /* 3D effect */
         }
         header .search-bar input {
             padding: 12px;
@@ -78,7 +79,7 @@
         }
         /* Banner Section */
         .banner {
-            background-color: #333;
+            background-color: #ff6347; /* Candy Apple Red */
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -107,10 +108,12 @@
         .featured-products {
             padding: 50px 20px;
             text-align: center;
+            background-color: #ff6347; /* Candy Apple Red */
         }
         .featured-products h2 {
             font-size: 32px;
             margin-bottom: 30px;
+            color: white;
         }
         .product-grid {
             display: grid;
@@ -196,7 +199,7 @@
     <!-- Header -->
     <header>
         <div class="logo">
-            <h1 style="text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);">FA-Tshirt</h1> <!-- 3D effect added -->
+            <h1 style="font-family: 'Snap ITC', cursive; text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);">FA-Tshirt</h1> <!-- 3D effect added -->
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search your products...">
