--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background-color: #ff6347; /* Candy Apple Red */
+            background-color: #6a1b9a; /* Purple */
             color: white;
         }
         header .logo h1 {
@@ -54,7 +54,7 @@
             transition: background-color 0.3s ease;
         }
         header .header-right a:hover {
-            background-color: #e5533f; /* Darker red for hover */
+            background-color: #4a148c; /* Darker purple for hover */
         }
         /* Main Navigation Menu */
         .main-nav {
@@ -75,11 +75,11 @@
             text-transform: uppercase;
         }
         .main-nav ul li a:hover {
-            color: #ff6347;
+            color: #6a1b9a;
         }
         /* Banner Section */
         .banner {
-            background-color: #ff6347; /* Candy Apple Red */
+            background-color: #6a1b9a; /* Purple */
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -95,20 +95,20 @@
         .banner button {
             padding: 12px 20px;
             font-size: 16px;
-            background-color: #ff6347;
+            background-color: #6a1b9a;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         .banner button:hover {
-            background-color: #e5533f;
+            background-color: #4a148c;
         }
         /* Featured Products Section */
         .featured-products {
             padding: 50px 20px;
             text-align: center;
-            background-color: #ff6347; /* Candy Apple Red */
+            background-color: #6a1b9a; /* Purple */
         }
         .featured-products h2 {
             font-size: 32px;
@@ -138,20 +138,20 @@
         }
         .product-item p {
             font-size: 16px;
-            color: #ff6347;
+            color: #6a1b9a;
             margin-top: 10px;
         }
         .product-item button {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #ff6347;
+            background-color: #6a1b9a;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         .product-item button:hover {
-            background-color: #e5533f;
+            background-color: #4a148c;
         }
         /* Footer Section */
         footer {
@@ -183,7 +183,7 @@
             font-size: 14px;
         }
         footer a:hover {
-            color: #ff6347;
+            color: #6a1b9a;
         }
         footer .footer-bottom {
             text-align: center;
