--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 15px 30px;
-            background-color: #6a1b9a; /* Purple */
+            background-color: #ff3030; /* Candy Apple Red */
             color: white;
         }
         header .logo h1 {
@@ -35,7 +35,7 @@
         }
         header .search-bar input {
             padding: 12px;
-            width: 450px; /* Stretch the search bar */
+            width: 450px;
             border-radius: 20px;
             border: 1px solid #ccc;
             font-size: 16px;
@@ -54,7 +54,7 @@
             transition: background-color 0.3s ease;
         }
         header .header-right a:hover {
-            background-color: #4a148c; /* Darker purple for hover */
+            background-color: #b32222; /* Darker red for hover */
         }
         /* Main Navigation Menu */
         .main-nav {
@@ -69,17 +69,17 @@
             gap: 30px;
         }
         .main-nav ul li a {
-            color: black; /* Text color for navigation items */
+            color: black;
             text-decoration: none;
             font-size: 18px;
             text-transform: uppercase;
         }
         .main-nav ul li a:hover {
-            color: #6a1b9a;
+            color: #ff3030; /* Candy Apple Red */
         }
         /* Banner Section */
         .banner {
-            background-color: #6a1b9a; /* Purple */
+            background-color: #ff3030; /* Candy Apple Red */
             color: white;
             padding: 60px 20px;
             text-align: center;
@@ -95,20 +95,22 @@
         .banner button {
             padding: 12px 20px;
             font-size: 16px;
-            background-color: #6a1b9a;
+            background-color: #ff3030; /* Candy Apple Red */
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: transform 0.3s ease;
         }
         .banner button:hover {
-            background-color: #4a148c;
+            background-color: #b32222; /* Darker red for hover */
+            transform: scale(1.1);
         }
         /* Featured Products Section */
         .featured-products {
             padding: 50px 20px;
             text-align: center;
-            background-color: #6a1b9a; /* Purple */
+            background-color: #ff3030; /* Candy Apple Red */
         }
         .featured-products h2 {
             font-size: 32px;
@@ -138,20 +140,22 @@
         }
         .product-item p {
             font-size: 16px;
-            color: #6a1b9a;
+            color: #ff3030; /* Candy Apple Red */
             margin-top: 10px;
         }
         .product-item button {
             padding: 10px 20px;
             font-size: 16px;
-            background-color: #6a1b9a;
+            background-color: #ff3030; /* Candy Apple Red */
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            transition: transform 0.3s ease;
         }
         .product-item button:hover {
-            background-color: #4a148c;
+            background-color: #b32222; /* Darker red for hover */
+            transform: scale(1.1);
         }
         /* Footer Section */
         footer {
@@ -183,7 +187,7 @@
             font-size: 14px;
         }
         footer a:hover {
-            color: #6a1b9a;
+            color: #ff3030; /* Candy Apple Red */
         }
         footer .footer-bottom {
             text-align: center;
